solucionados todos los errores y mejoras para la app